--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --background-primary: '#FFFAFF';
+  --background-secondary: '#E6DBD0';
+  --primary: '#04151F';
+  --secondary: '#657ED4';
+  --tertiary: '#D33F49';
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
