--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  height: 200vh;
+}
+
+.form {
+  background-color: var(--background-secondary);
+  height: 90vh;
+  width: 33%;
+  padding: 16px;
+  margin: 16px;
+  border-radius: 16px;
+  box-shadow: 4px 3px 5px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 16px;
 }
