--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,19 @@
 .app {
   display: flex;
+  margin: 16px 16px 0;
 }
 
 .form {
   background-color: var(--background-secondary);
-  height: 90vh;
   width: 33%;
   padding: 16px;
-  margin: 16px;
+  margin-right: 16px;
   border-radius: 16px;
   box-shadow: 4px 3px 5px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 16px;
+}
+
+.preview {
+  flex: 1;
 }
