add dynamic site layout

--- a/src/SiteLayout/SiteLayout.css
+++ b/src/SiteLayout/SiteLayout.css
@@ -2,8 +2,13 @@
   display: flex;
   flex-direction: column;
   padding: 16px;
-  background-color: #E6DBD05F;
+  background-color: #E6DBD0;
   border-radius: 8px;
   margin-top: 16px;
-  flex: 1;
+}
+
+.site-layout-row {
+  display: flex;
+  margin-bottom: 4px;
+  box-sizing: border-box;
 }
