--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
   display: flex;
   margin: 16px 16px 0;
+  height: 100%;
 }
 
 .form {
@@ -12,4 +13,5 @@
   box-shadow: 4px 3px 5px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 16px;
+  max-height: 90vh;
 }
