--- a/src/SiteLayout/SiteLayout.css
+++ b/src/SiteLayout/SiteLayout.css
@@ -5,6 +5,8 @@
   background-color: #E6DBD0;
   border-radius: 8px;
   margin-top: 16px;
+  height: 100%;
+  box-shadow: 4px 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 .site-layout-row {
@@ -22,4 +24,12 @@
   padding: 8px;
   border-radius: 8px;
   top: -50%;
+}
+
+.tooltip-swatch {
+  height: 12px;
+  width: 12px;
+  border: 1px solid #FFF;
+  margin-right: 4px;
+  border-radius: 4px;
 }
