--- a/src/SiteLayout/SiteLayout.css
+++ b/src/SiteLayout/SiteLayout.css
@@ -5,8 +5,10 @@
   background-color: #E6DBD0;
   border-radius: 8px;
   margin-top: 16px;
-  height: 100%;
+  height: 80%;
+  max-height: 80%;
   box-shadow: 4px 3px 5px rgba(0, 0, 0, 0.1);
+  overflow-y: scroll;
 }
 
 .site-layout-row {
