--- a/src/BatteryForm/DeviceRow/DeviceRow.css
+++ b/src/BatteryForm/DeviceRow/DeviceRow.css
@@ -3,25 +3,23 @@
   flex-direction: column;
   border-radius: 8px;
   padding: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 12px;
 }
 
-.device-row-top {
-  display: flex;
-  flex: 1;
-  align-items: center;
-}
-
-.device-row-bottom {
+.device-details {
   display: flex;
   justify-content: space-between;
-  flex: 1;
+  margin: 8px 0;
+}
+
+.input-container {
+  display: flex;
+  justify-content: center;
   align-items: center;
-  margin-top: 16px;
 }
 
 .input {
   margin-left: 8px;
-  height: 24px;
+  height: 20px;
   width: 64px;
 }
