--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app {
   display: flex;
   margin: 16px 16px 0;
-  height: 100%;
+  height: 100%;  
 }
 
 .form {
@@ -14,4 +14,16 @@
   position: sticky;
   top: 16px;
   max-height: calc(100vh - 32px);
+}
+
+@media screen and (max-width: 900px) {
+  .app {
+    flex-direction: column;
+  }
+
+  .form {
+    position: static;
+    margin-right: 0;
+    margin-bottom: 16px;
+  }
 }
