--- a/src/SiteLayout/SiteLayout.css
+++ b/src/SiteLayout/SiteLayout.css
@@ -8,7 +8,7 @@
   height: 80%;
   max-height: 80%;
   box-shadow: 4px 3px 5px rgba(0, 0, 0, 0.1);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .site-layout-row {
